! fix #1923 menu misalignment in mobile besocial

--- a/themes/default/css/_besocial/index_besocial.css
+++ b/themes/default/css/_besocial/index_besocial.css
@@ -1366,12 +1366,17 @@ a.help .icon {
 
 /* This one does 800 screens at default font size. */
 @media screen and (min-width: 50em) {
-		#menu_nav .listlevel1.subsections>a:before {
+	#menu_nav .listlevel1.subsections>a:before {
 		font-family: "FontAwesome";
-		margin: 0 5px 0 0;
+		margin: -1px 5px 0 0;
+		float: left;
 		font-size: 1.2em;
 		content: "\f0d7";
 		color: #43a8da;
+	}
+
+	#menu_nav .listlevel1 {
+		margin: 1px 2px 0;
 	}
 }
 @media screen and (max-width: 50em) {
